--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -7,47 +7,24 @@
 {% endblock %}
 
 {% block content %}
-<div class="chat_log">
-  {% for message in chat_data.log %}
-  <div class="message">
-    {% if message.type == "human" %}
-    <div class="container">
-      <div class="item">
-        <svg width="30" height="30">
-          <circle cx="15" cy="15" r="15" fill="red" />
-        </svg>
-      </div>
-      <div class="item">
-        <p>Human</p>
-      </div>
-    </div>
-    <p>{{ message.content }}</p>
-    {% endif %}
+<p>{% url 'textgen' %}<p>
 
-    {% if message.type == "ai" %}
-    <div class="container">
-      <div class="item">
-        <svg width="30" height="30">
-          <circle cx="15" cy="15" r="15" fill="blue" />
-        </svg>
-      </div>
-      <div class="item">
-        <p>AI</p>
-      </div>
-    </div>
-    <p>{{ message.content }}</p>
-    {% endif %}
-  </div>
-  <br>
-  {% endfor %}
-</div>
-
+<span id="chat_placeholder"></span>
 <div class="fixed-bottom-div">
-  <form method="post">
+  <form method="post" id="prompt">
     {% csrf_token %}
     <input type="text" name="prompt" maxlength="500" required id="id_prompt">
-    <button type="submit">Submit</button>
   </form>
 </div>
+
+
+<script>
+var chat_data = "{{ chat_data }}";
+const textgen_url = "{% url 'textgen'%}";
+
+
+ </script>
+<script src="{% static 'js/chat.js'%}" type="text/javascript"> </script>
+
 {% endblock %}
 
